force-app/main/default/objects/Services_Solutioning_Team__c/Services_Solutioning_Team__c.object-meta.xml
<CustomObject>
    <label>Services Solutioning Team Member</label>
    <nameField>
        <displayFormat>Team Member-{000000}</displayFormat>
        <label>Services Solutioning Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Solutioning Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>