force-app/main/default/objects/Services_Solutioning_Team__c/fields/Solution_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Solution_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services_Solutioning_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>