force-app/main/default/objects/Services_Solutioning_Team__c/fields/Solution_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Solution_Team_Role__c</fullName>
    <label>Solution Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Services Intake Manager</fullName>
            </value>
            <value>
                <fullName>Services Primary Architect</fullName>
            </value>
            <value>
                <fullName>Services Principal Consultant</fullName>
            </value>
            <value>
                <fullName>Services Provider</fullName>
            </value>
            <value>
                <fullName>Services Supporting Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>