force-app/main/default/objects/Services_Solutioning_Team__c/fields/Support_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_ID__c</fullName>
    <label>Support Request ID</label>
    <referenceTo>Support_Request__c</referenceTo>
    <relationshipName>Services_Solutioning_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>